Add Iteration class which has a PagesData and an ID, and turn Subworkflow into an ArrayList<Iteration>. Add Iteration IDs to the householdOptions template, and parse them out in HouseholdPregnancyMapper so that we only concatenate names.
Co-authored-by: Britney Epps <bepps@codeforamerica.org>
Co-authored-by: Ben Calegari <bcalegari@codeforamerica.org>
Co-authored-by: Alex Gonzalez <agonzalez@codeforamerica.org>
Co-authored-by: Sree Prasad <sprasad@codeforamerica.org>